<resources>
    <string name="app_name">Banco</string>
    <string name="novo">Novo</string>
    <string name="nome_label">Nome:</string>
    <string name="inscr_federal_label">Inscr. Federal:</string>
    <string name="logradouro_label">Logradouro:</string>
    <string name="numero_label">Número:</string>
    <string name="bairro_label">Bairro:</string>
    <string name="cidade_label">Cidade:</string>
    <string name="cep_label">CEP:</string>
    <string name="complemento_label">Complemento (Opcional):</string>
    <string name="telefone_label">Telefone:</string>
    <string name="celular_label">Celular:</string>
    <string name="email_label">E-mail:</string>
    <string name="agencia_nome_label">Nome da Agência:</string>
    <string name="agencia_numero_label">Número da Agência:</string>
    <string name="agencia_digito_label">Dígito verificador:</string>
    <string name="conta_numero_label">Conta número:</string>
    <string name="conta_tipo_label">Tipo de Conta:</string>
    <string name="conta_digito_label">Dígito verificador:</string>
    <string name="conta_origem_numero_label">Número da Conta de Origem:</string>
    <string name="conta_origem_digito_label">Dígito verificador da Conta de Origem:</string>
    <string name="conta_destino_numero_label">Número da Conta de Destino:</string>
    <string name="conta_destino_digito_label">Dígito verificador da Conta de Destino:</string>
    <string name="valor_transfer_label">Valor da Transferẽncia:</string>
    <string name="valor_saque_label">Valor do Saque:</string>
    <string name="botao_transfer_label">Transferir</string>
    <string name="botao_save_label">Salvar</string>
    <string name="numero_conta_saque_label">Número da Conta para Saque:</string>
    <string name="digito_conta_saque_label">Dígito da Conta para Saque:</string>
    <string name="numero_agencia_conta_saque_label">Número da Agência da Conta para Saque:</string>
    <string name="digito_agencia_conta_saque_label">Dígito verificador da Agência da Conta para Saque:</string>
    <string name="numero_agencia_conta_origem_label">Número da Agência da Conta Origem:</string>
    <string name="digito_agencia_conta_origem_label">Dígito verificador da Agência da Conta Origem:</string>
    <string name="numero_agencia_conta_destino_label">Número da Agência da Conta Destino:</string>
    <string name="digito_agencia_conta_destino_label">Dígito verificador da Agência da Conta Destino:</string>
    <string name="botao_saque_label">Sacar</string>
    <string name="numero_agencia_conta_deposito_label">Número da Agência da Conta para Deposito:</string>
    <string name="digito_agencia_conta_deposito_label">Dígito verificador da Agência da Conta para Deposito:</string>
    <string name="numero_conta_deposito_label">Número da Conta para Deposito:</string>
    <string name="digito_conta_deposito_label">Dígito verificador da para Deposito:</string>
    <string name="valor_deposito_label">Valor do Deposito</string>
    <string name="botao_deposito_label">Depositar</string>
    <string name="id_label">ID</string>
</resources>
