<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_label"
            />
        <EditText
            android:id="@+id/titular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            >
            <requestFocus/>
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inscr_federal_label"
            />
        <EditText
            android:id="@+id/inscrFederal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />
        <!-- Dados de endereco -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logradouro_label"
            />
        <EditText
            android:id="@+id/endereco_logradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bairro_label"
            />
        <EditText
            android:id="@+id/endereco_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidade_label"
            />
        <EditText
            android:id="@+id/endereco_cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cep_label"
            />
        <EditText
            android:id="@+id/endereco_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complemento_label"
            />

        <EditText
            android:id="@+id/endereco_complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero_label"
            />
        <EditText
            android:id="@+id/endereco_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />
        <!-- Dados de contato -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone_label"
            />
        <EditText
            android:id="@+id/contato_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celular_label"
            />
        <EditText
            android:id="@+id/contato_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            />

        <EditText
            android:id="@+id/contato_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            />
    </LinearLayout>
</ScrollView>
